--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.verbose=true
-sonar.organization=witschey
+sonar.organization=witschey-key
 sonar.projectKey=witschey-key_twittertrend
 sonar.projectName=twittertrend
 sonar.language=java
