--- a/pom.xml
+++ b/pom.xml
@@ -89,9 +89,7 @@
 				<version>2.22.2</version>
 				<configuration>
 					<argLine>${argLine} -Xmx2048m</argLine>
-					<skipTests>false</skipTests>
-                			<testFailureIgnore>true</testFailureIgnore>
-                			<forkMode>once</forkMode>
+					<forkCount>0</forkCount>
 				</configuration>
 			</plugin>
 
