--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,4 @@ sonar.sourceEncoding=UTF-8
 sonar.sources=.
 sonar.java.binaries=target/classes
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
-sonar.javascript.exclusions=""
+sonar.exclusions
